# comments_scraper

./: .gitignore  docker-compose.yaml  pyproject.toml
src/youtube_scraper/: const.py  song_info_with_youtube.csv  track_list.csv  youtube_ids.txt
src/youtube_scraper/kafka_producers/: comment_producer.py
src/youtube_scraper/pipeline/extractors/: scrape_asyncer.py  scrape_concurrent.py  scrape_multiprocessing.py
src/youtube_scraper/pipeline/loaders/: adapters.py
src/youtube_scraper/pipeline/processors/: clean_data.py
